# esp32s3_audio_spectrum

./: .gitignore  CMakeLists.txt  README.md  build.py
components/adc_input/: CMakeLists.txt  pcm1804.c  pcm1804.h
components/dac_output/: CMakeLists.txt  pcm5102.c  pcm5102.h
components/display/: CMakeLists.txt  display.h  ili9486.c  ili9486.h
components/slave_control/: CMakeLists.txt  slave_uart.c  slave_uart.h  wchisp.c  wchisp.h
doc/: 1220200037474.468173.000 ПЗ.docx  developmentcode.txt
main/: CMakeLists.txt  audio_spectrum.c  idf_component.yml
main/dac_output/: pcm5102.c  pcm5102.h
main/display/: ili9486.c  ili9486.h
slave_controller/: CMakeLists.txt  delay.c  delay.h  main.c  main.cpp  toolchain.cmake  toolchain.cmake.win
slave_controller/gpio/: di_do_control.c  di_do_control.h  encoder.c  encoder.h
slave_controller/scripts/: build.sh  build_project_doc.sh  copy_and_program_ssh.sh  picocom_run.sh  program_flash.sh  program_flash_ssh.sh
